add favicon, fix message append logic

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   </head>
   <body>
   <h1>Hello</h1>
-    <form method="post" action="/">
-      <div>
-        <input type="text" name="message" placeholder="Type a message">
-      </div>
-      <button type="submit" >Submit</button>
-    </form>
+    <main>
+      <section class="message-container">
+        
+      </section>
+      <form>
+        <div>
+          <input type="text" name="message" placeholder="Type a message">
+        </div>
+        <button type="submit" >Submit</button>
+      </form>  
+    </main> 
   </body>
 </html>
