--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./tailwind.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
     <script src="index.js" defer></script>
   </head>
   <body class="flex p-5 items-center flex-col bg-black text-white min-h-screen">
