--- a/src/signup.html
+++ b/src/signup.html
@@ -26,7 +26,7 @@
       <form class="flex flex-col items-center gap-1 bg-red-50 p-10 rounded-md shadow-[5px_5px_teal] transition-shadow hover:shadow-none">
         <p>Sign Up Now!</p>
         <div>
-          <input type="text" name="email" value="" placeholder="Email">
+          <input type="email" name="email" value="" placeholder="Email">
         </div>
         <div>
           <input type="text" name="name" value="" placeholder="Name">
@@ -35,7 +35,7 @@
           <input type="text" name="username" value="" placeholder="Username">
         </div>
         <div>
-          <input type="text" name="password" value="" placeholder="Password">
+          <input type="password" name="password" value="" placeholder="Password">
         </div>
         <div class="p-1 flex items-center gap-2">
           <button type="submit" class="signup-button p-1 bg-red-200 hover:bg-red-400 rounded-md shadow-[5px_5px_teal] transition-shadow hover:shadow-none ">Sign Up</button>
