--- a/src/signup.html
+++ b/src/signup.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico"> 
     <script type="module" src="signup.js" defer></script>
   </head>
-  <body class="flex p-5 items-center flex-col bg-black text-white min-h-screen">
+  <body class="flex p-5 items-center flex-col h-screen">
     <header class="flex justify-between w-full p-1 items-center">
       <div class="menu-icon w-8 flex flex-col gap-1">
         <div class="bar-1 h-1 bg-white transition-transform"></div>
@@ -22,7 +22,26 @@
       </div>
       
     </header>
-    <main class="h-screen w-full flex justify-center items-center text-black">
+      
+
+    <main class="w-full flex-1 flex justify-center items-center text-white">
+      <div class="card w-96 bg-primary text-primary-content">
+        <div class="card-body">
+          <h2 class="card-title">Sign Up</h2>
+          <form class="flex flex-col gap-1">
+            <input name="email" type="email" placeholder="Email" class="input input-bordered text-white w-full max-w-xs" />
+            <input name="name" type="text" placeholder="Name" class="input input-bordered text-white w-full max-w-xs" />
+            <input name="username" type="text" placeholder="Username" class="input input-bordered text-white w-full max-w-xs" />
+            <input name="password" type="password" placeholder="Password" class="input input-bordered text-white w-full max-w-xs" />
+            <div class="flex justify-between">
+              <a class="link link-hover" href="/signin" >Sign In instead</a>
+              <a class="link link-hover" href="/dashboard" >Continue as guest</a>    
+            </div>
+            <button type="submit" class=" btn">Sign Up</button>
+          </form>
+        </div>
+      </div>
+<!--
       <form class="flex flex-col items-center gap-1 bg-red-50 p-10 rounded-md shadow-[5px_5px_teal] transition-shadow hover:shadow-none">
         <p>Sign Up Now!</p>
         <div>
@@ -43,6 +62,7 @@
           <button type="button" class="guest-button p-1 bg-red-200 hover:bg-red-400 rounded-md shadow-[5px_5px_teal] transition-shadow hover:shadow-none ">Continue As Guest</button>  
         </div>
       </form> 
+  --> 
     </main> 
   </body>
 </html>
