add messaging functionality and scrolling functionality

--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,15 @@
       </div>
       
     </header>
-    <div class="card items-stretch w-full max-w-[1000px] flex-1 bg-primary text-primary-content">
+    <div class="card items-stretch w-full max-w-[1000px] bg-primary text-primary-content">
       <div class="card-body">
         <h2 class="card-title">Name of user</h2>
-        <div class="message-container flex-1">
-          <div class="chat chat-start">
+        <div class="message-container h-[500px] max-h-[500px] overflow-y-auto">
+          <div class="chat chat-end">
             <div class="chat-bubble ">What kind of nonsense is this</div>
           </div>
         </div>
-        <form class="card-actions message-form ">
+        <form class="card-actions message-form mt-auto">
           <input type="text" name="message" value="" class="input text-white flex-1">
           <button type="submit" class="btn material-icons">&#xe163;</button>
 
