add session database logic and functionality, handle forbidden access

--- a/src/signup.html
+++ b/src/signup.html
@@ -4,7 +4,7 @@
     <title>Message Air</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="../tailwind.css" rel="stylesheet">
+    <link type="text/css" href="./tailwind.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico"> 
     <script type="module" src="signup.js" defer></script>
   </head>
@@ -20,7 +20,6 @@
        <img src="../images/profile-icon.jpg" alt="profile icon" class="rounded-full" > 
       </div>
       
-    </header>
       
 
     <main class="w-full flex-1 flex justify-center items-center text-white">
